Fix: Scanner now scans full S&P 500 (~500 stocks) instead of 30-stock sample
- Added get_sp500_tickers() method to fetch full S&P 500 list from Wikipedia
- Implemented caching to avoid repeated network calls
- Updated screen_by_universe() with use_full_sp500 parameter (default: True)
- Enhanced UI with toggle between full list and sample for testing
- Added lxml dependency for pandas.read_html()

The scanner now defaults to scanning all ~500 S&P 500 stocks with
an option to use the 30-stock sample for quick testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "sqlalchemy>=2.0.25",
     "pydantic>=2.6.0",
     "scipy>=1.12.0",
+    "lxml>=5.1.0",
 ]
 
 [project.optional-dependencies]
